--- a/static/css/login.css
+++ b/static/css/login.css
@@ -28,7 +28,7 @@ body {
 
 /* Left branding panel */
 .login-wrapper .left-panel {
-  background: linear-gradient(to bottom right, #ffffff, #e74c3c, #3498db);
+  background: linear-gradient(to bottom, #e74c3c, #073692);
   color: #f8f1f1;
   width: 50%;
   padding: 40px 30px;
