--- a/core/templates/core/helpdesk/ticket_by_status.html
+++ b/core/templates/core/helpdesk/ticket_by_status.html
@@ -81,3 +81,7 @@
 
 </div>
 {% endblock %}
+
+{% block extra_js %}
+<script src="{% static 'js/ticketing_dashboard.js' %}"></script>
+{% endblock %}
