--- a/core/templates/core/helpdesk/ticketing_dashboard.html
+++ b/core/templates/core/helpdesk/ticketing_dashboard.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}🎫 Ticketing Dashboard{% endblock %}
+{% block title %}Ticketing Dashboard{% endblock %}
 
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/ticketing_dashboard.css' %}">
