--- a/core/templates/core/file_management/file_list.html
+++ b/core/templates/core/file_management/file_list.html
@@ -20,7 +20,16 @@
     {% endfor %}
   </div>
 
-  <h3 class="section-subtitle">{% if active_category %}{{ active_category }}{% else %}All Files{% endif %}</h3>
+  <!--<h3 class="section-subtitle">{% if active_category %}{{ active_category }}{% else %}All Files{% endif %}</h3>-->
+  <h3 class="section-subtitle">
+    {% if file_type %}
+      Files of type: {{ file_type|slice:"1:"|upper }}
+    {% elif active_category %}
+      {{ active_category }}
+    {% else %}
+      All Files
+    {% endif %}
+  </h3>
 
   <div class="file-grid-header animate-fadein">
     <span>NAME</span>
