--- a/core/templates/core/helpdesk/escalated_list.html
+++ b/core/templates/core/helpdesk/escalated_list.html
@@ -1,5 +1,5 @@
-
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 <div class="container mt-5">
@@ -50,7 +50,7 @@
     {% else %}
         <div class="alert alert-success text-center p-4 rounded-3 shadow-sm">
             <i class="bi bi-check-circle-fill text-success fs-3"></i>
-            <p class="mt-2 mb-0 fw-semibold">No escalated tickets found 🎉</p>
+            <p class="mt-2 mb-0 fw-semibold">No escalated tickets found</p>
         </div>
     {% endif %}
 </div>
@@ -68,4 +68,9 @@
     .badge-medium { background-color: #fd7e14; } /* Orange */
     .badge-low { background-color: #198754; }    /* Green */
 </style>
+
 {% endblock %}
+
+{% block extra_js%}
+<script src="{% static 'js/ticketing_dashboard.js' %}"></script>
+{% endblock%}
