--- a/core/templates/accounts/admin_dashboard.html
+++ b/core/templates/accounts/admin_dashboard.html
@@ -84,6 +84,9 @@
       <a href="{% url 'manage_file_categories' %}" class="btn-nav">
         <i class="fas fa-file"></i> Manage File Categories
       </a>
+      <a href="{% url 'pre_dashboards' %}" class="btn-nav">
+        <i class="fas fa-tachometer-alt"></i> Pre-Dashboards
+      </a>
     </section>
 
     <!-- Manage User Roles -->
