--- a/core/templates/core/helpdesk/terminals.html
+++ b/core/templates/core/helpdesk/terminals.html
@@ -22,7 +22,7 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="upload_file">Upload Terminals CSV</label>
-            <input type="file" name="upload_file" class="form-control" required>
+            <input type="file" name="file" class="form-control" required>
         </div>
         <button type="submit" class="btn btn-success mt-3">Upload CSV</button>
     </form>
