--- a/core/templates/core/file_management/file_list.html
+++ b/core/templates/core/file_management/file_list.html
@@ -19,16 +19,17 @@
       <a href="{% url 'file_list_by_category' category.name %}" class="{% if category.name == active_category %}active{% endif %}">{{ category.name }}</a>
     {% endfor %}
   </div>
-
-  <!--<h3 class="section-subtitle">{% if active_category %}{{ active_category }}{% else %}All Files{% endif %}</h3>-->
+  
   <h3 class="section-subtitle">
-    {% if file_type %}
-      Files of type: {{ file_type|slice:"1:"|upper }}
-    {% elif active_category %}
-      {{ active_category }}
-    {% else %}
-      All Files
-    {% endif %}
+      {% if recent %}
+          Recent Files
+      {% elif file_type %}
+          Files of type: {{ file_type|slice:"1:"|upper }}
+      {% elif active_category %}
+          {{ active_category }}
+      {% else %}
+          All Files
+      {% endif %}
   </h3>
 
   <div class="file-grid-header animate-fadein">
