--- a/core/templates/core/file_management/user_list.html
+++ b/core/templates/core/file_management/user_list.html
@@ -18,7 +18,7 @@
         <th>Email</th>
         <th>Role</th>
         <th>Status</th>
-        <th>Actions</th>
+        <!--<th>Actions</th>-->
       </tr>
     </thead>
     <tbody>
@@ -42,7 +42,7 @@
             {{ user.is_active|yesno:"Active,Inactive" }}
           </span>
         </td>
-        <td data-label="Actions" class="actions">
+        <!--<td data-label="Actions" class="actions">
           <a href="{% url 'user_detail' user.id %}" class="btn view">View</a>
           {% if perms.auth.change_user %}
           <a href="{% url 'edit_user' user.id %}" class="btn edit">Edit</a>
@@ -54,7 +54,7 @@
               <button type="submit" class="btn delete" onclick="return confirm('Are you sure you want to delete this user?')">Delete</button>
             </form>
           {% endif %}
-        </td>
+        </td>-->
       </tr>
       {% endfor %}
     </tbody>
