--- a/core/templates/core/helpdesk/version_control.html
+++ b/core/templates/core/helpdesk/version_control.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-4" id="body">
+<div class="page-container" id="body">
   <h2>Version Controls</h2>
 
   <!-- Button to trigger modal -->
@@ -71,7 +71,7 @@
         </div>
         <div class="modal-footer">
           <button type="submit"  name="create" class="btn btn-primary">Create</button>
-          <button type="submit" name="create_another" class="btn btn-secondary">Create & Create Another</button>
+          <!--<button type="submit" name="create_another" class="btn btn-secondary">Create & Create Another</button>-->
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         </div>
       </form>
