--- a/static/css/file_list.css
+++ b/static/css/file_list.css
@@ -7,9 +7,10 @@ body {
 }
 
 .container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 2.5rem 2rem;
+  width: 100%;
+  max-width: 100%;
+  margin: 0;
+  padding: 2.5rem 3rem;
 }
 
 .page-title {
